<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist Maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="settings" formatted="true" translatable="false">Настройки</string>
    <string name="supportMail" translatable="false">Написать в поддержку</string>
    <string name="darkTheme" translatable="false">Темная тема</string>
    <string name="searchText">Поиск</string>
    <string name="mediatec">Медиатека</string>
    <string name="termsOfUse" translatable="false">Пользовательское соглашение</string>
    <string name="mediaLibrary" translatable="false">ТУТ БУДЕТ МЕДИАТЕКА</string>
    <string name="search" translatable="false">ТУТ БУДЕТ ПОИСК</string>
    <string name="appLinkUrl">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="emailUrl">flxugerax@gmail.com</string>
    <string name="emailTitleText">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailSubtext">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="termOfUseRl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="titleSearch">Поиск</string>
    <string name="shareApp">Поделиться приложением через</string>
    <string name="shareAppLink">"https://practicum.yandex.ru/android-developer/?from=catalog"</string>

    <string name="errorToConnection">Проблемы со связью</string>
    <string name="unloadFalse">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="textOnRefresh">Обновить</string>
    <string name="iTunesLink">https://itunes.apple.com</string>
    <string name="prevSearch">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>

    <string name="nothingSearch">Ничего не нашлось</string>

    <string name="track_image">Обложка трека</string>
    <string name="go_over">Перейти</string>
    <string name="track_author">Обратите внимание, что не только название трека может не помещаться на экране, но и имя артиста/группы.</string>
    <string name="track_timing">2:55</string>
    <string name="track_name">Smells Like Teen Spirit</string>


    <string name="back_arrow_button">Back Button</string>
    <string name="image_cover">image cover</string>


    <string name="add_to_favorite">Добавить в любимое</string>
    <string name="play">Начать воспроизведение</string>
    <string name="add_to_collection">Список треков</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="collection">Альбом</string>
    <string name="placeholderCurrentTrack">00:00</string>
    <string name="album_logo">Обложка трека</string>
    <string name="not_specified">Не указано</string>


    <string name="media_library">Медиатека</string>
    <string name="favorit_track">Избранные треки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="play_lists">Плэйлисты</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="media_library_playlists_is_empty">Вы не создали\nни одного плейлиста</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_playlist_title">Новый плейлист</string>
    <string name="string_permission_required">Доступ к хранилищу необходим для нормального функционирования приложения</string>
    <string name="create_playlist">Создать</string>

    <string name="add_on_playlist_bottom_sheet">Добавить в плейлист</string>

    <string name="trackNotAdded" translatable="false">Трек уже добавлен в плейлист %1$s</string>
    <string name="trackAdded" translatable="false">Добавлено в плейлист %1$s</string>


    <string name="askCancelRequset">"Завершить создание плейлиста?"</string>
    <string name="askUnsavedDate">"Все несохраненные данные будут потеряны"</string>
    <string name="cancel">"Завершить"</string>
    <string name="decline">"Отмена"</string>

    <string name="share">Поделиться</string>
    <string name="editPlaylistInformation">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <string name="emptyTrackSend">В данном плейлисте нет треков для отправки</string>
    <string name="emptyListTrackEnterPlaylist">В плэйлисте нету трэков</string>
</resources>