<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backgroundColorMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/appNameMain"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/searchText"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediatec"
            app:icon="@drawable/light_mode_mediatec"
            style="@style/mainButton"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            style="@style/mainButton"/>
    </LinearLayout>

</LinearLayout>
