<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioPlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/back_arrow_button"
            android:src="@drawable/button_back_light"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image_cover"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/track_name_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="400"
            android:textSize="@dimen/headerTextSize"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="Thunderstruck" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="400"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTop_toBottomOf="@id/track_name_player"
            tools:text="AC/DC" />

        <ImageButton
            android:id="@+id/buttonAddCollection"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/image_collection_add"
            android:contentDescription="@string/add_to_collection"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/startBorder"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/image_play_button"
            android:contentDescription="@string/play"
            android:backgroundTint="?attr/colorOnSecondary"
            app:layout_constraintEnd_toStartOf="@id/favorite_button"
            app:layout_constraintStart_toEndOf="@id/buttonAddCollection"
            app:layout_constraintTop_toBottomOf="@+id/artistName" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/image_favorite_track"
            android:contentDescription="@string/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@id/playButton" />

        <TextView
            android:id="@+id/currentTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/placeholderCurrentTrack"
            android:textColor="?attr/colorOnSecondary"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton" />

        <TextView
            android:id="@+id/durationTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackTimeTitle"
            app:layout_constraintTop_toBottomOf="@id/currentTrackTime" />

        <TextView
            android:id="@+id/collectionNameTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackAlbumTitle"
            app:layout_constraintTop_toBottomOf="@id/durationTitle" />

        <TextView
            android:id="@+id/releaseDateTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackYearTitle"
            app:layout_constraintTop_toBottomOf="@id/collectionNameTitle" />

        <TextView
            android:id="@+id/genreTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackGenreTitle"
            app:layout_constraintTop_toBottomOf="@id/releaseDateTitle" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/TrackContentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/startBorder"
            app:layout_constraintTag="trackCountryTitle"
            app:layout_constraintTop_toBottomOf="@id/genreTitle" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/textsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTitle, trackAlbumTitle, trackYearTitle, trackGenreTitle, trackCountryTitle" />

        <TextView
            android:firstBaselineToTopHeight="0dp"
            android:id="@+id/durationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/durationTitle"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="4:52"

            style="@style/TrackContent" />

        <TextView
            android:firstBaselineToTopHeight="0dp"
            android:id="@+id/collectionNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/collectionNameTitle"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="The Razors Edge "

            style="@style/TrackContent" />

        <TextView
            android:firstBaselineToTopHeight="0dp"
            android:id="@+id/releaseDateValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/releaseDateTitle"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="1990"
            style="@style/TrackContent" />

        <TextView
            android:firstBaselineToTopHeight="0dp"
            android:id="@+id/trackGenreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/genreTitle"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="Рок"
            style="@style/TrackContent" />

        <TextView
            android:id="@+id/countryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/countryTitle"
            app:layout_constraintEnd_toStartOf="@id/endBorder"
            app:layout_constraintStart_toEndOf="@id/textsBarrier"
            tools:text="С.Ш.А"
            style="@style/TrackContent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>