<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_mode"
    android:orientation="vertical">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <ImageView

            android:layout_width="48dp"
            android:layout_height="match_parent"
            app:icon="@drawable/button_back_light"
            app:iconGravity="textStart"
            app:iconPadding="24dp"
            app:iconTint="@color/black"
            >
        </ImageView>

        <FrameLayout
            android:layout_marginLeft="48dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/settings"
                android:layout_marginStart="12dp"
                android:gravity="fill"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textFontWeight="500"
                android:lineHeight="25.78dp"
                android:textStyle="bold"
                />


        </FrameLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/darkTheme"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="fill"
            android:textFontWeight="400"
            android:lineHeight="18.75dp"/>

        <Switch
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="9dp"
            android:background="@color/dark_mode"
            app:icon="@drawable/share_light_mode"
            app:iconTint="@color/white"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/shareApp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="fill"
            android:textFontWeight="400"
            android:lineHeight="18.75dp"/>

        <ImageView
            android:src="@drawable/share_light_mode"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:layout_gravity="end"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/dark_mode"
            app:iconTint="@color/white"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/supportMail"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="fill"
            android:textFontWeight="400"
            android:lineHeight="18.75dp"/>

        <ImageView
            android:src="@drawable/support_light_mode"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:layout_gravity="end"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/dark_mode"
            app:iconTint="@color/white"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/termsOfUse"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="fill"
            android:textFontWeight="400"
            android:lineHeight="18.75dp"/>

        <ImageView
            android:src="@drawable/arrow_light_mode"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:layout_gravity="end"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/dark_mode"
            app:iconTint="@color/white"
            />

    </FrameLayout>



</LinearLayout>