<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backgroundColorSettings">


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        style="@style/smallContainerSetting">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:src="@drawable/button_back_light"
            style="@style/buttonDarkTheme"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/titleSettings"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        style="@style/smallContainerSetting">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/button_on_refresh"
            android:layout_gravity="center_vertical"
            style="@style/smallContainerSetting"
            tools:ignore="RtlCompat,TextViewEdits,TouchTargetSizeCheck"
            android:text="@string/darkTheme"
            app:thumbTint="?attr/thumbColor"
            app:trackTint="?attr/trackColor" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="61dp"
            android:orientation="horizontal"
            style="@style/smallContainerSetting">

            <TextView
                android:id="@+id/shareAppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/shareApp"
                style="@style/smallContainerSetting" />

            <ImageView
                android:id="@+id/shareAppImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:src="@drawable/share_light_mode"
                style="@style/backgroundColorSettings"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="61dp"
            android:orientation="horizontal"
            style="@style/smallContainerSetting">

            <TextView
                android:id="@+id/supportText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/supportMail"
                style="@style/smallContainerSetting"
                />

            <ImageView
                android:id="@+id/supportImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:src="@drawable/support_light_mode"
                style="@style/backgroundColorSettings"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="61dp"
            android:orientation="horizontal"
            style="@style/smallContainerSetting">

            <TextView
                android:id="@+id/termOfUseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/termsOfUse"
                style="@style/smallContainerSetting" />

            <ImageView
                android:id="@+id/termOfUseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:src="@drawable/arrow_light_mode"
                style="@style/backgroundColorSettings"/>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>